testsuite/tests/typecheck/should_fail/T15067.stderr

T15067.hs:9:14: error:
    • No instance for (Typeable (# 'GHC.Types.LiftedRep #))
        arising from a use of ‘typeRep’
        GHC can't yet do polykinded
          Typeable ((# 'GHC.Types.LiftedRep #) :: *
                                                  -> *
                                                  -> TYPE
                                                       ('GHC.Types.SumRep
                                                          '[ 'GHC.Types.LiftedRep,
                                                             'GHC.Types.LiftedRep]))
    • In the expression: typeRep
      In an equation for ‘floopadoop’: floopadoop = typeRep
